--- a/DarkCode/Skills_HTML_CSS/style.css
+++ b/DarkCode/Skills_HTML_CSS/style.css
@@ -68,10 +68,10 @@ body{
     }
 }
 @keyframes javascript{
-    0%{
+    from{
         width: 0%;
     }
-    100%{
+    to{
         width: 80%;
     }
 }
